chore(*): fix sidebar and tab content overflow

--- a/src/app/styles/custom-element.styles.scss
+++ b/src/app/styles/custom-element.styles.scss
@@ -57,6 +57,7 @@ button[widget] {
 .tab-group[widget] {
     main {
         min-height: 1px;
+        max-height: calc(100vh - 13em);
     }
 }
 
